// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchModeButton renders gray button if mode not equal to searchBy in store 1`] = `
<Button
  className="search-mode-btn"
  color="gray"
  onClick={[Function]}
  size="sm"
>
  Title 
</Button>
`;

exports[`SearchModeButton renders red button if mode equal to searchBy in store 1`] = `
<Button
  className="search-mode-btn"
  color="red"
  onClick={[Function]}
  size="sm"
>
  Title 
</Button>
`;
